# rustacean

./: .dockerignore  .gitignore  .gitleaksignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  deny.toml  openapi.json
.cargo/: config.toml
.githooks/: README.md  post-merge
.github/: pull_request_template.md
.github/workflows/: board-smoke.yml  chat-smoke.yml  ci.yml  dev-stack-drift-check.yml  mcp-server-publish.yml  pipeline-e2e.yml  playwright-nightly.yml  pr-bundle-check.yml  pr-hygiene.yml  pr-migration-hygiene.yml  regenerate-eval-baseline.yml  retrieval-perf.yml  runtime-smoke.yml
charts/litellm/: Chart.yaml  values.yaml
compose/: README.md  board-smoke.yml  dev.env.tpl  dev.yml  e2e.yml  env.schema.toml  hindsight.env.example  tailscale.env  tailscale.yml  test.yml
compose/scripts/: ollama-stub.py  validate-env.sh
crates/rb-agent-runtime/: Cargo.toml
crates/rb-agent-runtime/src/: error.rs  event.rs  lib.rs  runtime.rs
crates/rb-agent-runtime/src/adapters/: claude.rs  litellm.rs  mod.rs
crates/rb-auth/: Cargo.toml
crates/rb-build-info/: Cargo.toml  build.rs
crates/rb-build-info/src/: lib.rs
crates/rb-github/: Cargo.toml
crates/rb-kafka-health/: Cargo.toml
crates/rb-kafka-health/src/: config.rs  lib.rs  watcher.rs  watcher_tests.rs
crates/rb-mcp/: Cargo.toml
crates/rb-mcp/src/: lib.rs  protocol.rs  session.rs  types.rs
crates/rb-metrics/: Cargo.toml
crates/rb-metrics/src/: lib.rs
crates/rb-query/: Cargo.toml
crates/rb-query/src/: error.rs  hybrid.rs  hybrid_tests.rs  lib.rs  rewrite.rs  semantic.rs
crates/rb-query/src/graph/: impls.rs  mod.rs  traversal.rs  usages.rs
crates/rb-query/src/graph/traversal/: bfs.rs  mod.rs  pagination.rs  types.rs
crates/rb-query/src/pg/: items.rs  mod.rs  modules.rs
crates/rb-query/src/vector/: search.rs
crates/rb-rerank/: Cargo.toml
crates/rb-rerank/src/: error.rs  lib.rs  llm.rs  local.rs  reranker.rs
crates/rb-schemas/: Cargo.toml  build.rs
crates/rb-storage-neo4j/: Cargo.toml
crates/rb-storage-qdrant/: Cargo.toml
crates/rb-storage-qdrant/src/: error.rs  lib.rs  search.rs  store.rs
docker/: .profile-marker
docker/agent-runner/: Dockerfile
docker/claude-login/: Dockerfile  entrypoint.sh  token-refresh.js
docker/control-api/: Dockerfile
docker/embed-worker/: Dockerfile
docker/expand-worker/: Dockerfile
docker/frontend/: Dockerfile  nginx.conf
docker/ingest-clone/: Dockerfile
docker/ingest-graph/: Dockerfile
docker/parse-worker/: Dockerfile
docker/projector-neo4j/: Dockerfile
docker/projector-pg/: Dockerfile
docker/synthetic-load/: Dockerfile
docker/tombstoner/: Dockerfile
docker/typecheck-worker/: Dockerfile
docs/: PORT_MAP.md  api-reference.md  architecture.md  chat-panel.md  dev-stack-auto-rebuild.md  dev-stack-health-alerting.md  getting-started.md  mcp-chat-tokens.md  mcp-local-setup.md  runbook.md  runtime-adapter.md  runtime-config.md
docs/CODEMAPS/: agent-runner.md  control-api.md  rb-github.md
docs/decisions/: ADR-009-agent-execution-architecture.md  ADR-010-github-app-tenant-install.md  ADR-011-dev-stack-auto-rebuild.md  ADR-012-wave8-hardening-polish.md  ADR-013-chat-panel-architecture.md  ADR-014-retrieval-hybrid-search.md
docs/observability/: retrieval-metrics.md
docs/qa/: chat-panel-e2e.md  frontend-runtime-scenarios.md  uat-fingerprint-spec.md  wave6-e2e-test.md
docs/retrieval-eval/: README.md  baseline.json  results-snapshot.json
docs/runbooks/: auth-migrations-sanity.md  claude-login.md  github-install-rebind.md  npm-token-rotation.md  stack-rebuild-verify.md  tenant-provisioning.md
frontend/: eslint.config.js  package-lock.json  package.json  playwright.config.ts  vitest.config.ts
frontend/axe-results/: api-keys-axe.json  api-keys-focus.json  axe-report.json  forgot-password-axe.json  forgot-password-focus.json  login-axe.json  login-focus.json  members-axe.json  members-focus.json  repos-axe.json  repos-focus.json  reset-password-axe.json  reset-password-focus.json  signup-axe.json  signup-focus.json  verify-email-axe.json  verify-email-focus.json
frontend/e2e/: agent-execution.spec.ts  axe-dispatch.spec.ts  chat-panel-citations.spec.ts  (+30 more)
memory/: feedback_same_agent_stale_checkout.md
scripts/: apply-branch-protection.sh  board-smoke.sh  cargo-locked.sh  check-compose-working-dir.sh  check-dev-stack-drift.sh  dev-health-check.sh  dev-stack-auto-rebuild.sh  dev-stack-up.sh  dev-stack-watch.sh  e2e-smoke-test.sh  eval-retrieval.py  fingerprint-diff.py  grafana-lint.sh  install-git-hooks.sh  setup-mold.sh  smoke-cargo-rss.sh  state-reconcile.sh  synthetic-load.sh  test-drift-exit-codes.sh  uat-fingerprint.sh
services/agent-runner/: Cargo.toml
services/agent-runner/src/: consumer.rs  event_relay.rs  lib.rs  main.rs  normalizer.rs  session.rs  session_tests.rs  workspace_gc.rs
services/agent-runner/src/adapters/: claude_code.rs  mod.rs  opencode.rs  pi.rs
services/agent-runner/src/event_relay/: dispatch.rs  mod.rs  retry.rs
services/agent-runner/src/session/: cap_tests.rs  caps.rs  events.rs  mod.rs  natural_exit.rs  output.rs  redact.rs  redact_tests.rs  seq.rs  terminate.rs  tests.rs
services/agent-runner/tests/: normalizer_integration.rs
services/agent-runner/tests/fixtures/: session_basic.ndjson  session_error.ndjson
services/audit-worker/: Cargo.toml
services/audit-worker/src/: audit_consumer.rs  main.rs  mirror_consumer.rs
services/ingest-graph/: Cargo.toml
services/ingest-graph/src/: consumer.rs  extractor.rs  extractor_calls.rs  main.rs
services/ingest-graph/tests/: integration.rs
services/mcp-server/: Cargo.toml
services/mcp-server/src/: config.rs  error.rs  handlers.rs  lib.rs  main.rs  server.rs  state.rs
services/mcp-server/src/middleware/: auth.rs  mod.rs
services/mcp-server/src/routes/: mcp.rs  mod.rs
services/mcp-server/src/tools/: dispatch.rs  mod.rs
services/synthetic-load/: Cargo.toml
services/synthetic-load/src/: client.rs  config.rs  health.rs  main.rs  report.rs  state.rs  tenant.rs
services/synthetic-load/src/loops/: agent.rs  ingestion.rs  mod.rs  query.rs
(+418 files in other folders)
