[package]
name = "rb-agent-runtime"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Serialization
serde.workspace = true
serde_json.workspace = true
# Async
tokio.workspace = true
async-trait.workspace = true
futures.workspace = true
# Error handling
thiserror.workspace = true
anyhow.workspace = true
# IDs
uuid = { workspace = true, features = ["v4"] }
# Time
chrono = { workspace = true }
# HTTP (LiteLLM + Anthropic API calls)
reqwest.workspace = true
# Cancel signalling across concurrent tasks
dashmap.workspace = true
# Tracing
tracing.workspace = true

# NOTE: rb-agent-runtime MUST NOT depend on rb-query.
# Tool callbacks are supplied by the host process (control-api) via the
# ToolDispatch trait — this crate is a pure protocol adapter.

[dev-dependencies]
tokio = { workspace = true }

[lints]
workspace = true
