[package]
name = "rb-build-info"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

description = "Compile-time build provenance — SHA, timestamp, and dirty flag baked into every binary."

[dependencies]
serde = { workspace = true, features = ["derive"] }

[lints]
workspace = true
