[package]
name = "rb-mcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
uuid = { workspace = true, features = ["v4"] }
dashmap.workspace = true

[lints]
workspace = true
