[package]
name = "rb-query"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
rb-tenant = { path = "../rb-tenant", version = "0.1.0" }
sqlx.workspace = true
uuid.workspace = true
thiserror.workspace = true
serde.workspace = true
moka = { workspace = true, features = ["future"] }
tracing.workspace = true

[lints]
workspace = true
