[package]
name = "agent-runner"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "agent-runner"
path = "src/main.rs"

[dependencies]
rb-auth = { path = "../../crates/rb-auth", version = "0.1.0" }
rb-kafka = { path = "../../crates/rb-kafka", version = "0.1.0" }
rb-sse = { path = "../../crates/rb-sse", version = "0.1.0" }
rb-secrets = { path = "../../crates/rb-secrets", version = "0.1.0" }
rb-tenant = { path = "../../crates/rb-tenant", version = "0.1.0" }
rb-schemas = { path = "../../crates/rb-schemas", version = "0.1.0" }
rb-storage-pg = { path = "../../crates/rb-storage-pg", version = "0.1.0" }
rb-agent-runtime = { path = "../../crates/rb-agent-runtime", version = "0.1.0" }
rb-tracing = { path = "../../crates/rb-tracing", version = "0.1.0" }
tokio.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
clap.workspace = true
sqlx.workspace = true
uuid.workspace = true
chrono.workspace = true
reqwest.workspace = true
rdkafka.workspace = true
metrics.workspace = true
dashmap.workspace = true

nix = { version = "0.29", features = ["signal"] }
rand.workspace = true
hex.workspace = true

[lints]
workspace = true
