[package]
name = "agent-runner"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "rb-agent-runner"
path = "src/main.rs"

[lib]
name = "agent_runner"
path = "src/lib.rs"

[dependencies]
rb-build-info = { path = "../../crates/rb-build-info", version = "0.1.0" }
rb-kafka = { path = "../../crates/rb-kafka", version = "0.1.0" }
rb-schemas = { path = "../../crates/rb-schemas", version = "0.1.0" }
rb-tracing = { path = "../../crates/rb-tracing", version = "0.1.0" }

anyhow.workspace = true
async-trait.workspace = true
clap.workspace = true
chrono.workspace = true
metrics.workspace = true
nix = { version = "0.29", features = ["signal"] }
reqwest = { workspace = true, features = ["json"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
metrics-util.workspace = true
tempfile = "3"
wiremock.workspace = true

[lints]
workspace = true
