[package]
name = "audit-worker"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "audit-worker"
path = "src/main.rs"

[dependencies]
rb-build-info   = { path = "../../crates/rb-build-info",  version = "0.1.0" }
rb-kafka        = { path = "../../crates/rb-kafka",         version = "0.1.0" }
rb-kafka-health = { path = "../../crates/rb-kafka-health",  version = "0.1.0" }
rb-schemas  = { path = "../../crates/rb-schemas",    version = "0.1.0" }
rb-tracing  = { path = "../../crates/rb-tracing",    version = "0.1.0" }
anyhow.workspace   = true
axum.workspace     = true
chrono.workspace   = true
metrics.workspace  = true
metrics-exporter-prometheus.workspace = true
opentelemetry.workspace = true
serde.workspace    = true
serde_json.workspace = true
sqlx.workspace     = true
tokio.workspace    = true
tracing.workspace  = true
uuid.workspace     = true

[lints]
workspace = true
