[package]
name = "ingest-graph"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "ingest-graph"
path = "src/main.rs"

[dependencies]
rb-blob    = { path = "../../crates/rb-blob",    version = "0.1.0" }
rb-build-info   = { path = "../../crates/rb-build-info",   version = "0.1.0" }
rb-kafka        = { path = "../../crates/rb-kafka",        version = "0.1.0" }
rb-kafka-health = { path = "../../crates/rb-kafka-health", version = "0.1.0" }
rb-schemas = { path = "../../crates/rb-schemas", version = "0.1.0" }
rb-tracing = { path = "../../crates/rb-tracing", version = "0.1.0" }

anyhow.workspace      = true
axum.workspace        = true
chrono.workspace      = true
clap.workspace        = true
serde_json.workspace  = true
metrics.workspace = true
metrics-exporter-prometheus.workspace = true
tokio.workspace   = true
tracing.workspace = true
uuid.workspace    = true

# Syn for relation extraction from source bodies
proc-macro2 = { version = "1", features = ["span-locations"] }
syn = { version = "2", features = ["full", "visit"] }

[dev-dependencies]
metrics-util = { workspace = true }

[lints]
workspace = true
